--- a/ApplicationCore/ApplicationCore.csproj
+++ b/ApplicationCore/ApplicationCore.csproj
@@ -42,8 +42,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IServiceAgenda.cs" />
-    <Compile Include="Services\ServiceAgenda.cs" />
+    <Compile Include="Services\IServiceCalendario.cs" />
+    <Compile Include="Services\IServiceCancion.cs" />
+    <Compile Include="Services\IServiceCategoria.cs" />
+    <Compile Include="Services\IServicePuesto.cs" />
+    <Compile Include="Services\IServiceUsuario.cs" />
+    <Compile Include="Services\ServiceCalendario.cs" />
+    <Compile Include="Services\ServiceCancion.cs" />
+    <Compile Include="Services\ServiceCategoria.cs" />
+    <Compile Include="Services\ServicePuesto.cs" />
+    <Compile Include="Services\ServiceUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infraestructure\Infraestructure.csproj">
