--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -144,6 +144,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CalendarioController.cs" />
     <Compile Include="Controllers\CancionController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\GestionCancionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -151,10 +152,13 @@
     <Compile Include="Controllers\RecuperacionController.cs" />
     <Compile Include="Controllers\RolServicioController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
+    <Compile Include="Enum\Roles.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\CustomAuthenticationFilter.cs" />
+    <Compile Include="Security\CustomAuthorizeAttribute.cs" />
     <Compile Include="Utils\Log.cs" />
     <Compile Include="Utils\Util.cs" />
     <Compile Include="Viewmodels\ViewModelChangePass.cs" />
@@ -2213,6 +2217,9 @@
     <Content Include="Views\Puesto\Details.cshtml" />
     <Content Include="Views\Puesto\Edit.cshtml" />
     <Content Include="Views\Puesto\Index.cshtml" />
+    <Content Include="Views\Error\NotFound.cshtml" />
+    <Content Include="Views\Error\Default.cshtml" />
+    <Content Include="Views\Login\UnAuthorized.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
