--- a/Infraestructure/Infraestructure.csproj
+++ b/Infraestructure/Infraestructure.csproj
@@ -106,12 +106,14 @@
     <Compile Include="Repository\IRepositoryCancion.cs" />
     <Compile Include="Repository\IRepositoryCategoria.cs" />
     <Compile Include="Repository\IRepositoryPuesto.cs" />
+    <Compile Include="Repository\IRepositoryRol.cs" />
     <Compile Include="Repository\IRepositoryRolServicio.cs" />
     <Compile Include="Repository\IRepositoryUsuario.cs" />
     <Compile Include="Repository\RepositoryCalendario.cs" />
     <Compile Include="Repository\RepositoryCancion.cs" />
     <Compile Include="Repository\RepositoryCategoria.cs" />
     <Compile Include="Repository\RepositoryPuesto.cs" />
+    <Compile Include="Repository\RepositoryRol.cs" />
     <Compile Include="Repository\RepositoryRolServicio.cs" />
     <Compile Include="Repository\RepositoryUsuario.cs" />
     <Compile Include="Utils\Log.cs" />
