--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -2220,6 +2220,8 @@
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Error\Default.cshtml" />
     <Content Include="Views\Login\UnAuthorized.cshtml" />
+    <Content Include="Views\Shared\_MenuLider.cshtml" />
+    <Content Include="Views\Shared\_MenuIntegrante.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
