--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -2227,6 +2227,7 @@
     <Content Include="Views\Categoria\Create.cshtml" />
     <Content Include="Views\Categoria\Edit.cshtml" />
     <Content Include="Views\Categoria\Details.cshtml" />
+    <Content Include="Views\Usuario\Profile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
