Cambio de imagen en cambios de clave y solucion bug cambio clave primer ingreso

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -200,6 +200,7 @@
     <Content Include="Content\dist\img\logo nazareno full blanco.png" />
     <Content Include="Content\dist\img\logo nazareno full primary.png" />
     <Content Include="Content\dist\img\logo nazareno primary.png" />
+    <Content Include="Content\dist\img\ojo.png" />
     <Content Include="Content\dist\js\adminlte.js" />
     <Content Include="Content\dist\js\adminlte.min.js" />
     <Content Include="Content\dist\js\cambio\script.js" />
