--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -2230,6 +2230,7 @@
     <Content Include="Views\Categoria\Edit.cshtml" />
     <Content Include="Views\Categoria\Details.cshtml" />
     <Content Include="Views\Usuario\UserProfile.cshtml" />
+    <Content Include="Views\Shared\_MenuLogOut.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
