AVANCE REPORTE DE SESION

--- a/ApplicationCore/ApplicationCore.csproj
+++ b/ApplicationCore/ApplicationCore.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Services\IServiceCancion.cs" />
     <Compile Include="Services\IServiceCategoria.cs" />
     <Compile Include="Services\IServicePuesto.cs" />
+    <Compile Include="Services\IServiceReporte.cs" />
     <Compile Include="Services\IServiceRol.cs" />
     <Compile Include="Services\IServiceRolServicio.cs" />
     <Compile Include="Services\IServiceUsuario.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="Services\ServiceCancion.cs" />
     <Compile Include="Services\ServiceCategoria.cs" />
     <Compile Include="Services\ServicePuesto.cs" />
+    <Compile Include="Services\ServiceReporte.cs" />
     <Compile Include="Services\ServiceRol.cs" />
     <Compile Include="Services\ServiceRolServicio.cs" />
     <Compile Include="Services\ServiceUsuario.cs" />
