--- a/ApplicationCore/ApplicationCore.csproj
+++ b/ApplicationCore/ApplicationCore.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IServiceBitacora_Sesion.cs" />
     <Compile Include="Services\IServiceCalendario.cs" />
     <Compile Include="Services\IServiceCancion.cs" />
     <Compile Include="Services\IServiceCategoria.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Services\IServiceRol.cs" />
     <Compile Include="Services\IServiceRolServicio.cs" />
     <Compile Include="Services\IServiceUsuario.cs" />
+    <Compile Include="Services\ServiceBitacora_Sesion.cs" />
     <Compile Include="Services\ServiceCalendario.cs" />
     <Compile Include="Services\ServiceCancion.cs" />
     <Compile Include="Services\ServiceCategoria.cs" />
