--- a/Infraestructure/Infraestructure.csproj
+++ b/Infraestructure/Infraestructure.csproj
@@ -108,6 +108,7 @@
       <DependentUpon>MyModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepositoryBitacora_Sesion.cs" />
     <Compile Include="Repository\IRepositoryCalendario.cs" />
     <Compile Include="Repository\IRepositoryCancion.cs" />
     <Compile Include="Repository\IRepositoryCategoria.cs" />
@@ -116,6 +117,7 @@
     <Compile Include="Repository\IRepositoryRolServicio.cs" />
     <Compile Include="Repository\IRepositoryUsuario.cs" />
     <Compile Include="Repository\IRepositoryReporte.cs" />
+    <Compile Include="Repository\RepositoryBitacora_Sesion.cs" />
     <Compile Include="Repository\RepositoryCalendario.cs" />
     <Compile Include="Repository\RepositoryCancion.cs" />
     <Compile Include="Repository\RepositoryCategoria.cs" />
