--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -2265,6 +2265,7 @@
     <Content Include="Views\Reporte\ReporteSesion.cshtml" />
     <Content Include="Views\Reporte\ReporteUsuariosIngresados.cshtml" />
     <Content Include="Views\Reporte\ReporteServicios.cshtml" />
+    <Content Include="Views\Login\Prueba.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
