Listo el diseño de las pantallas card

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -211,7 +211,9 @@
     <Content Include="Content\dist\css\alt\adminlte.plugins.min.css" />
     <Content Include="Content\dist\css\cambio\cambiostyle.css" />
     <Content Include="Content\dist\css\changecomplet\changecompletstyle.css" />
+    <Content Include="Content\dist\css\login\Login.css" />
     <Content Include="Content\dist\css\login\loginstyle.css" />
+    <Content Include="Content\dist\css\recupera2\Recovery.css" />
     <Content Include="Content\dist\css\recupera2\recuperastyle.css" />
     <Content Include="Content\dist\css\tooltip.css" />
     <Content Include="Content\dist\img\avatar.png" />
@@ -230,6 +232,7 @@
     <Content Include="Content\dist\img\logo nazareno full blanco.png" />
     <Content Include="Content\dist\img\logo nazareno full primary.png" />
     <Content Include="Content\dist\img\logo nazareno primary.png" />
+    <Content Include="Content\dist\img\ojo primary.png" />
     <Content Include="Content\dist\img\ojo.png" />
     <Content Include="Content\dist\js\adminlte.js" />
     <Content Include="Content\dist\js\adminlte.min.js" />
