--- a/ApplicationCore/ApplicationCore.csproj
+++ b/ApplicationCore/ApplicationCore.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Services\IServiceCalendario.cs" />
     <Compile Include="Services\IServiceCancion.cs" />
     <Compile Include="Services\IServiceCategoria.cs" />
+    <Compile Include="Services\IServiceCorreo.cs" />
     <Compile Include="Services\IServiceGestionCancion.cs" />
     <Compile Include="Services\IServicePuesto.cs" />
     <Compile Include="Services\IServiceReporte.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Services\ServiceCalendario.cs" />
     <Compile Include="Services\ServiceCancion.cs" />
     <Compile Include="Services\ServiceCategoria.cs" />
+    <Compile Include="Services\ServiceCorreo.cs" />
     <Compile Include="Services\ServiceGestionCancion.cs" />
     <Compile Include="Services\ServicePuesto.cs" />
     <Compile Include="Services\ServiceReporte.cs" />
