--- a/Infraestructure/Infraestructure.csproj
+++ b/Infraestructure/Infraestructure.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Bitacora_General.cs">
+    <Compile Include="Models\Bitacora_RolServicio.cs">
       <DependentUpon>MyModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Bitacora_Sesion.cs">
@@ -108,6 +108,7 @@
       <DependentUpon>MyModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepositoryBitacora.cs" />
     <Compile Include="Repository\IRepositoryBitacora_Sesion.cs" />
     <Compile Include="Repository\IRepositoryCalendario.cs" />
     <Compile Include="Repository\IRepositoryCancion.cs" />
@@ -119,6 +120,7 @@
     <Compile Include="Repository\IRepositoryRolServicio.cs" />
     <Compile Include="Repository\IRepositoryUsuario.cs" />
     <Compile Include="Repository\IRepositoryReporte.cs" />
+    <Compile Include="Repository\RepositoryBitacora.cs" />
     <Compile Include="Repository\RepositoryBitacora_Sesion.cs" />
     <Compile Include="Repository\RepositoryCalendario.cs" />
     <Compile Include="Repository\RepositoryCancion.cs" />
