Correcciones varias en validaciones de datos

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -2253,7 +2253,6 @@
     <Content Include="Views\Usuario\Edit.cshtml" />
     <Content Include="Views\Usuario\Index.cshtml" />
     <Content Include="Views\Recuperacion\ChangeComplet.cshtml" />
-    <Content Include="Views\Recuperacion\Index.cshtml" />
     <Content Include="Views\Recuperacion\Recovery.cshtml" />
     <Content Include="Views\Puesto\Create.cshtml" />
     <Content Include="Views\Puesto\Details.cshtml" />
@@ -2279,6 +2278,9 @@
     <Content Include="Views\Bitacora\Details.cshtml" />
     <Content Include="Views\CorreoEmisor\Edit.cshtml" />
     <Content Include="Views\CorreoEmisor\Index.cshtml" />
+    <Content Include="Views\Usuario\Create - Copia.cshtml" />
+    <Content Include="Views\Recuperacion\Index - Copia.cshtml" />
+    <Content Include="Views\Recuperacion\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
