Se sube al proyecto el manual del integrante

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -2209,7 +2209,7 @@
     <Content Include="Content\plugins\summernote\summernote.js.map" />
     <Content Include="Content\plugins\summernote\summernote.min.js.map" />
     <Content Include="Content\plugins\toastr\toastr.js.map" />
-    <Content Include="Content\Manual\CV.pdf" />
+    <Content Include="Content\Manual\Integrante - Manual de usuario Naza Musical Note.docx.pdf" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
