Se sube el manual del lider, listos los manuales

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -2208,6 +2208,7 @@
     <Content Include="Content\plugins\summernote\summernote.min.js.map" />
     <Content Include="Content\plugins\toastr\toastr.js.map" />
     <Content Include="Content\Manual\Integrante - Manual de usuario Naza Musical Note.docx.pdf" />
+    <Content Include="Content\Manual\Manual de usuario Naza Musical Note.docx.pdf" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
